Mejora arquitectura